syntax = "proto3";
package user;
option go_package = "./proto";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string address = 5;
  string phone = 6;
  string company = 7;
  string department = 8;
  string position = 9;
  repeated string skills = 10;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
  string address = 4;
  string phone = 5;
  string company = 6;
  string department = 7;
  string position = 8;
  repeated string skills = 9;
}

message GetUserResponse {
  User user = 1;
  string message = 2;
}

message GetUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  string message = 3;
}

message CreateUserResponse {
  User user = 1;
  string message = 2;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
} 